--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^3.0.0-beta.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-simple-typewriter": "^5.0.1",
