--- a/package.json
+++ b/package.json
@@ -43,5 +43,13 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.3"
+  },
+  "use state": {
+    "prefix": "us",
+    "body": [
+      "const [$1, set${1/(.*)/${1:/capitalize}/}] = useState($2);",
+      "$3"
+    ],
+    "description": "creates use state"
   }
 }
