--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,21 @@
 {
   "cSpell.words": [
+    "dataandaiethics",
+    "indiaboxoffice",
+    "introtopowerbi",
+    "introtosql",
+    "intsql",
     "pathtaxi",
     "postgre",
     "POSTGRE",
     "powerbi",
+    "powerbiservice",
     "powerquery",
     "signin",
+    "sqlbasic",
+    "sqlint",
+    "sqlmaven",
+    "thinkinglikeananalyst",
     "wallclock"
   ]
 }
